--- a/src/app/components/navbar/navbar.less
+++ b/src/app/components/navbar/navbar.less
@@ -1,3 +1,19 @@
 .acme-navbar-text {
   color: white;
 }
+.nav .admin{
+	border-top:1px solid #eee;
+	margin-top:10px;
+	background-color:#000;
+	color:#aaa;
+	&:hover{
+		background-color:#333;
+	}
+	a{
+		color:#aaa;
+		&:hover{
+			color:#fff;
+			background-color:#333;
+		}
+	}
+}
