--- a/src/app/index.less
+++ b/src/app/index.less
@@ -15,9 +15,11 @@
 html,body{
   height: 100%; margin: 0px; padding: 0px;
 }
+
 .ng-scope{
   height:100%;
 }
+
 
 .browsehappy {
   margin: 0.2em 0;
@@ -38,12 +40,39 @@ html,body{
 .angular-google-map-container { height: 400px; }
 
 #login{
-  background:url('../assets/images/login.jpg') no-repeat center;
+  background-image:url("../assets/images/login.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
   background-size:cover;
   width:100%;
   height:100%;
   min-height:100%;
   display:table;
+}
+
+.baseline-line{
+  margin-bottom:32px;
+}
+.baseline-graph{
+  width:100%;
+  height:120px;
+}
+
+
+.fading.ng-enter {
+  transition:0.5s linear all;
+ 
+}
+.fading.ng-enter.ng-enter-active {
+  opacity:1;
+}
+
+.fading.ng-leave.ng-leave-active {
+  opacity:0;
+}
+.fading.ng-leave {
+  transition:0.5s linear all;
+  opacity:1;
 }
 
 /**
